# vkdtAgent

./: .gitignore  README.md  package.json  pyproject.toml  vkdt-upstream.json
.github/workflows/: ci.yml  vkdt-upstream-watch.yml
docs/: native-ui-bridge.md  native-vkdt-testing.md  protocol-v1.md
native/: vkdt-bridge.c  vkdt-bridge.h  vkdt-upstream-patch.diff  vkdt_agent_bridge_helper.py  vkdt_graph.py
scripts/: apply_vkdt_native_patch.py  run_server.sh  run_vkdt_helper.sh  test-python.sh  typecheck-python.sh  vkdt_upstream.py
server/: app.py  bridge.py  bridge_types.py  mock_planner.py  session.py  vkdt_catalog.py  vkdt_graph.py  vkdt_runner.py
server/client/: app.js  index.html
server/tests/: fake_vkdt_cli.py  test_api.py  test_graph.py  test_session.py  test_smoke.py
shared/: __init__.py  protocol.py
